# cornserve

./: .dockerignore  .gitmodules  404.html  README.md  eric-docker.sh  index.html  local-gateway-routing.yaml  mkdocs.yml  pyrightconfig.json  sitemap.xml
python/: pyproject.toml  pyproject.toml.orig
python/cornserve/: cli.py  constants.py  frontend.py  logging.py  logging.py.orig  misc.py  tracing.py  utils.py
python/cornserve/cli/: audio_streamer.py  log_streamer.py  main.py  tasklib_explorer.py
python/cornserve/cli/utils/: k8s.py
python/cornserve/frontend/: __init__.py  app.py  tasks.py
python/cornserve/services/: utils.py
python/cornserve/services/cr_manager/: __init__.py  manager.py
python/cornserve/services/encoder_server/: server.py
python/cornserve/services/gateway/: __init__.py  entrypoint.py  models.py  router.py  session.py  task_manager.py
python/cornserve/services/llm_server/: server.py
python/cornserve/services/resource_manager/: entrypoint.py  grpc.py  manager.py  resource.py  server.py
python/cornserve/services/sidecar/: api.py  launch.py  receiver.py  scheduler.py  schema.py  sender.py  server.py  (+2 more)
python/cornserve/sidecar/: api.py  constants.py  schema.py  serde.py  utils.py
python/cornserve/task/: base.py  context.py  forward.py  registry.py
python/cornserve/task_executors/: launch.py  profile.py
python/cornserve/tasklib/: __init__.py
python/scripts/: lint.sh
python/tests/services/: test_sidecar.py
python/tests/task/: test_base.py  test_registry.py  test_subtasks.py
python/tests/task_executors/: test_profile.py
(+388 files in other folders)
